--- a/styles/main.css
+++ b/styles/main.css
@@ -1,1 +1,6 @@
-#img @media only screen and (max-width: 576px){align-content: center;}
+#nav-nd-mob,#other{background: -webkit-linear-gradient(left, rgb(53, 92, 125) 0%, rgb(97, 91, 123) 40%, rgb(158, 101, 128) 80%, rgb(192, 108, 132) 100%);
+    background: -o-linear-gradient(left, rgb(53, 92, 125) 0%, rgb(97, 91, 123) 40%, rgb(158, 101, 128) 80%, rgb(192, 108, 132) 100%);
+    background: -ms-linear-gradient(left, rgb(53, 92, 125) 0%, rgb(97, 91, 123) 40%, rgb(158, 101, 128) 80%, rgb(192, 108, 132) 100%);
+    background: -moz-linear-gradient(left, rgb(53, 92, 125) 0%, rgb(97, 91, 123) 40%, rgb(158, 101, 128) 80%, rgb(192, 108, 132) 100%);
+    background: linear-gradient(to right, rgb(53, 92, 125) 0%, rgb(97, 91, 123) 40%, rgb(158, 101, 128) 80%, rgb(192, 108, 132) 100%);
+    }
