--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,4 @@
-#nav-nd-mob,#other{background: -webkit-linear-gradient(left, rgb(53, 92, 125) 0%, rgb(97, 91, 123) 40%, rgb(158, 101, 128) 80%, rgb(192, 108, 132) 100%);
+#other,#navcolor{background: -webkit-linear-gradient(left, rgb(53, 92, 125) 0%, rgb(97, 91, 123) 40%, rgb(158, 101, 128) 80%, rgb(192, 108, 132) 100%);
     background: -o-linear-gradient(left, rgb(53, 92, 125) 0%, rgb(97, 91, 123) 40%, rgb(158, 101, 128) 80%, rgb(192, 108, 132) 100%);
     background: -ms-linear-gradient(left, rgb(53, 92, 125) 0%, rgb(97, 91, 123) 40%, rgb(158, 101, 128) 80%, rgb(192, 108, 132) 100%);
     background: -moz-linear-gradient(left, rgb(53, 92, 125) 0%, rgb(97, 91, 123) 40%, rgb(158, 101, 128) 80%, rgb(192, 108, 132) 100%);
